# maritime-schema

./: .buildinfo  .gitignore  .sourcery.yaml  404.html  CHANGELOG.html  CHANGELOG.md  Gemfile  LICENSE.html  LICENSE.md  README.html  README.md  STYLEGUIDE.html  STYLEGUIDE.md  _config.yml  api.html  baseline_situations.html  changelog.html  cli.html  cli.publish_schema.html  genindex.html  index.html  index.md  maritime_schema.api.html  maritime_schema.html  maritime_schema.types.caga.html  maritime_schema.types.html  marzip.html  objects.inv  py-modindex.html  pyproject.toml  qa.bat  requirements-dev.txt  requirements.txt  robots.txt  run.py  schema.caga.html  schema.caga.input_schema.html  schema.caga.output_schema.html  schema.html  search.html  (+8 more)
.github/workflows/: _build_and_publish_documentation.yml  _build_package.yml  _code_quality.yml  _publish_package.yml  _publish_package_test.yml  publish_release.yml
_app/: version.json
_app/immutable/assets/: 0.DCesqPIX.css  2.Di-ByHa2.css  atom-one-light.Cd9iEEPF.css
_app/immutable/chunks/: B34NZRqv.js  BBKXswpA.js  BCubaneS.js  BE0uvbYZ.js  BhPMz_yL.js  Bsf1tCgp.js  BtGlkhJD.js  BvJccNPL.js  C9HbFHjr.js  CAZ4xsjq.js  CNByooqZ.js  Cf7fyAry.js  Cq3hftVj.js  CtSq7BwY.js  D4LV7J6C.js  DGEnuWSG.js  DIVXi524.js  DU3iM5g5.js  DXMflhj4.js  DYTFaGhl.js  DdE82ZjY.js  DmASnmrc.js  DtGAzN3E.js  K6Q3709J.js  N6wHR3ck.js  _4S0Yfex.js  b1zdZXu9.js  l6RkJ-TT.js  lBNUUMHF.js
_app/immutable/entry/: app.CV5FXncp.js  start.C3WpO7EW.js
_app/immutable/nodes/: 0.nttnwW5I.js  1.CqjpSdwf.js  2.Dx6qfsln.js  3.CENdrekD.js  4.BCafQuZV.js  5.DHyfalV0.js  6.CCPU_IsM.js  7.B7UCIBwZ.js  8.BVK3l0VP.js  9.ShaLEN6N.js
_includes/: footer.html  header.html
_sources/: cli.rst.txt  index.rst.txt  maritime_schema.types.caga.rst.txt  maritime_schema.types.rst.txt  schema.caga.input_schema.rst.txt
assets/css/: styles.css
branch/main/: .buildinfo  CHANGELOG.html  LICENSE.html  README.html  STYLEGUIDE.html  api.html  cli.html  cli.publish_schema.html  genindex.html  index.html  maritime_schema.api.html  maritime_schema.html  maritime_schema.types.caga.html  maritime_schema.types.html  objects.inv  py-modindex.html  schema.caga.html  schema.caga.input_schema.html  schema.caga.output_schema.html  schema.html  search.html  searchindex.js
branch/main/_sources/: schema.caga.output_schema.rst.txt  schema.caga.rst.txt  schema.rst.txt
changelog/: __data.json
docs/schema/: situation_output.html  traffic_situation.html
docs/schema/caga/: input_schema.html  output_schema.html
docs/source/: api.rst  cli.maritime_schema.rst  cli.mypackage.rst  cli.publish_schema.rst  cli.rst  conf.py  index.rst  maritime_schema.api.rst  maritime_schema.rst  maritime_schema.subpackage1.module1.rst  maritime_schema.subpackage1.rst  maritime_schema.subpackage2.module2.rst  maritime_schema.subpackage2.rst  maritime_schema.types.caga.rst  maritime_schema.types.rst  mypackage.api.rst  mypackage.rst  mypackage.subpackage1.module1.rst  mypackage.subpackage1.rst  mypackage.subpackage2.module2.rst  mypackage.subpackage2.rst  mypackage.utils.logging.rst  mypackage.utils.rst  schema.caga.input_schema.rst  schema.caga.output_schema.rst
docs/source/schema/caga/: input_schema.html  output_schema.html
examples/: output_schema_example.py  output_schema_file.json  situation_output.json  traffic_situation.json  traffic_situation_example.py
examples/docs/schema/caga/: input_schema.html  output_schema.html
examples/schema/caga/: input_schema.json  output_schema.json
input_schema/: input_schema.html  input_schema.json
maritime_schema/: maritime_types.py
output_schema/: output_schema.html  output_schema.json
pages/: baseline_situations.md  marzip.md  simulation_output.md  situation_output.md  traffic_situation.md
schema/: situation_output.json  traffic_situation.json  traffic_situation_example.json
schema-docs/: situation_output.html  traffic_situation.html
schema/caga/: input_schema.json  output_schema.json
schemas/: situation_output.json  traffic_situation.json
situation_output/: __data.json
src/maritime_schema/: api.py
src/maritime_schema/cli/: maritime_schema.py  publish_schema.py
src/maritime_schema/schema/: types.py
src/maritime_schema/schema/caga/: input_schema.json  output_schema.json
src/maritime_schema/subpackage1/: module1.py
src/maritime_schema/subpackage2/: module2.py
src/maritime_schema/types/: caga.py  caga_examples.py
src/maritime_schema/utils/: logging.py  publish.py  strings.py
tests/: conftest.py  test_api.py
tests/cli/: test_maritime_schema_cli.py
tests/schema/: test_schema.py
tests/subpackage1/: test_module1.py
tests/subpackage2/: test_module2.py
tests/test_working_directory/: .gitignore  test_config_file  test_config_file.json
tests/types/: test_caga.py
traffic_situation/: __data.json
