[tool.poetry]
name = "maritime-schema"
version = "0.1.1"
description = ""
authors = ["Minos Hemrich <minos.hemrich@dnv.com>"]
readme = "README.md"
packages = [{include = "maritime_schema"}]

[tool.poetry.dependencies]
pydantic = "^2.6.1"
json-schema-for-humans= "^0.3.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
