[metadata]
name = maritime-schema
version = 0.0.3b1
summary = Python data classes and JSON schemata for maritime traffic scenarios.
description = Python package containing data classes and corresponding JSON schemata for common types used in generating traffic scenarios and testing of autonomy.
long_description = file: README.md
long_description_content_type = text/markdown
home_page = https://dnv-opensource.github.io/maritime-schema/README.html
project_urls =
    GitHub = https://github.com/dnv-opensource/maritime-schema
license = MIT
license_files = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Operating System :: Microsoft :: Windows
    Operating System :: POSIX :: Linux
    Operating System :: MacOS
    Environment :: Console
    Intended Audience :: Developers
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering
    Topic :: Software Development :: Libraries :: Python Modules
platform = Python3.x
readme_file = README.md
author = Author One
author_email = "Author One" <author.one@dnv.com>
maintainer = Claas Rostock
maintainer_email = "Claas Rostock" <claas.rostock@dnv.com>

[options]
package_dir =
    =src
packages = find:
include_package_data = True
python_requires = >=3.9
install_requires =
    pydantic>=2.5
    dictIO>=0.3.1
    # some_package_on_pypi>=0.1.0
    # some_project_in_my_local_dev @ file:../some_project_in_my_local_dev
    # some_project_on_github @ git+https://github.com/user/project.git@version_or_tag_or_branch_name#egg=project_name

[options.packages.find]
where = src
exclude =
    test*

[options.entry_points]
console_scripts =
    maritime-schema = maritime_schema.cli.maritime_schema:main

[coverage:run]
source = maritime_schema
branch = True

[coverage:report]
fail_under = 10.0
show_missing = True
skip_covered = True

[coverage:paths]
source =
    src/maritime_schema
    */site-packages/maritime-schema

[tox:tox]
isolated_build = True
envlist = py{39,310,311,312}-{linux,macos,windows}
# envlist = py{39,310,311,312}-{windows}
# envlist = py{39,310,311,312}

[testenv]
system_site_packages = True
deps =
    pytest>=7.4
    pytest-cov>=4.1
commands =
    pytest --cov --cov-config setup.cfg {posargs}
